# PolicyBriefAnalysis

./: .env.template  .gitignore  LICENSE  Policy Brief Analysis.pptx  README.md  cli.py  example.py  exploratory_analysis.ipynb  pyproject.toml  results.html  results.ipynb
config/: config.yaml  enums.yaml  frames.yaml
data/: results.csv
output/: Method.docx  documents.csv  documents.parquet  frames.csv  frames.parquet  recommendations.csv  recommendations.parquet  recommendations_snippet_ai.csv  structural_core.csv
output/crossval/: comparison.csv  context_comparison.csv  crosstab.csv  metrics.json
src/policybrief/: __init__.py  cross_validator.py  frame_detector.py  frontmatter_extractor.py  llm_client.py  metrics_calculator.py  models.py  pdf_extractor.py  pipeline.py  recommendation_extractor.py  section_segmenter.py  snippet_analysis.py  solution_analyzer.py  structural_core_extractor.py  utils.py
tests/: __init__.py  test_frame_detector.py  test_frontmatter_extractor.py  test_integration.py  test_models.py  test_pipeline.py  test_recommendation_extractor.py  test_section_segmenter.py  test_snippet_analysis.py  test_structural_core_extractor.py
tests/data/: sample_policy_brief.txt
